--- a/StudentSupport/templates/students/student_mid_sem_feedback.html
+++ b/StudentSupport/templates/students/student_mid_sem_feedback.html
@@ -33,6 +33,9 @@
         .expandable {
             cursor: pointer;
         }
+        td {
+            white-space: normal;
+        }
     </style>
 {% endblock custom_css %}
 <!-- Custom CSS Block > End -->
@@ -144,9 +147,9 @@
                             <tbody>
                             {% for q in questions %}
                                 <tr>
-                                    <th scope="row">{{ forloop.counter }}</th>
-                                    <td>{{ q.question_text }}</td>
-                                    <td><div class="ans"></div></td>
+                                    <th scope="row" style="width: 10%">{{ forloop.counter }}</th>
+                                    <td style="width: 70%">{{ q.question_text }}</td>
+                                    <td style="width: 20%"><div class="ans"></div></td>
                                 </tr>
                             {% endfor %}
                             </tbody>
